# dual_parabolic_wave_propagator_cpp

./: .gitignore  CFL_COMPLIANCE_REPORT.md  CMakeLists.txt  CORRECTIONS_COMPLETE.md  FINAL_GROUND_TRUTH_VERIFICATION.md  GROUND_TRUTH_COMPLIANCE_REPORT.md  GUI_IMPLEMENTATION_SUCCESS.md  MIGRATION_REPORT.md  README.md  WAVE_VISUALIZATION_COMPLETE.md  build.sh  complete_wave_plotter.py  corrected_visualization_fixed.py  cpp_wave_animation_generator.py  create_compliance_report.py  create_wave_animation.py  debug_launch.py  enhanced_wave_plotter.py  gradio_standalone.py  launch_gradio.py  performance_test.sh  project_status.py  python_wave_animator.py  quick_verification.py  requiremnts.txt  run_x11.sh  setup.py  simple_gradio.py  simple_launch.py  simple_pulse_test.py  simple_wave_gif_test.py  simple_wave_plotter.py  test_corrected_simulation.py  test_gradio.txt  test_gradio_app.py  test_ground_truth_compliance.py  test_output.txt  test_output2.txt  test_output3.txt  test_pulse_simulation.py  (+9 more)
build_console/: CMakeCache.txt  Makefile  cmake_install.cmake
build_qt/: CMakeCache.txt
build_x11/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp_wave_data/: metadata.txt  wave_data_t0001.txt  wave_data_t0002.txt  wave_data_t0003.txt  wave_data_t0004.txt  wave_data_t0005.txt  wave_data_t0006.txt  wave_data_t0007.txt  wave_data_t0008.txt  wave_data_t0009.txt  wave_data_t0010.txt  wave_data_t0011.txt  wave_data_t0012.txt  wave_data_t0013.txt  wave_data_t0014.txt  wave_data_t0015.txt  wave_data_t0016.txt  wave_data_t0017.txt  wave_data_t0018.txt  wave_data_t0019.txt  wave_data_t0020.txt  wave_data_t0021.txt  wave_data_t0022.txt  wave_data_t0023.txt  wave_data_t0024.txt  wave_data_t0025.txt  wave_data_t0026.txt  wave_data_t0027.txt  wave_data_t0028.txt  wave_data_t0029.txt  wave_data_t0030.txt  wave_data_t0031.txt  wave_data_t0032.txt  wave_data_t0033.txt  wave_data_t0034.txt  wave_data_t0035.txt  wave_data_t0036.txt  wave_data_t0037.txt  wave_data_t0038.txt  wave_data_t0039.txt  (+41 more)
include/: DualParabolicWaveSimulation.h  MainWindow.h  Parabola.h  Types.h  WaveField.h  WaveSimulationWidget.h
python/dual_parabolic_wave/: __init__.py  gradio_app.py  simulation.py  utils.py  visualization.py
python/src/: python_bindings.cpp
src/: DualParabolicWaveSimulation.cpp  MainWindow.cpp  Parabola.cpp  WaveField.cpp  WaveSimulationWidget.cpp  benchmark.cpp  main.cpp  main_console.cpp  main_opengl.cpp  main_x11.cpp  python_bindings.cpp  wave_data_exporter.cpp
thick_parabolic_wave_data/: metadata.txt  wave_data_t0001.txt  wave_data_t0002.txt  wave_data_t0003.txt  wave_data_t0004.txt  wave_data_t0005.txt  wave_data_t0006.txt  wave_data_t0007.txt  wave_data_t0008.txt  wave_data_t0009.txt  wave_data_t0010.txt  wave_data_t0011.txt  wave_data_t0012.txt  wave_data_t0013.txt  wave_data_t0014.txt  wave_data_t0015.txt  wave_data_t0016.txt  wave_data_t0017.txt  wave_data_t0018.txt  wave_data_t0019.txt  wave_data_t0020.txt  wave_data_t0021.txt  wave_data_t0022.txt  wave_data_t0023.txt  wave_data_t0024.txt  wave_data_t0025.txt  wave_data_t0026.txt  wave_data_t0027.txt  wave_data_t0028.txt  wave_data_t0029.txt  wave_data_t0030.txt  wave_data_t0031.txt  wave_data_t0032.txt  wave_data_t0033.txt  wave_data_t0034.txt  wave_data_t0035.txt  wave_data_t0036.txt  wave_data_t0037.txt  wave_data_t0038.txt  wave_data_t0039.txt  (+2362 more)
wave_animation_output/: dual_parabolic_wave_metadata.json
